Commend for too large code improved.